[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/level_gui.gd" type="Script" id=1]
[ext_resource path="res://scenes/dlg_again.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/victory.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/dlg_areyousure.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/btnmenuUP.png" type="Texture" id=5]
[ext_resource path="res://sprites/btnmenuDOWN.png" type="Texture" id=6]
[ext_resource path="res://sprites/btnagainUP.png" type="Texture" id=7]
[ext_resource path="res://sprites/btnagainDOWN.png" type="Texture" id=8]
[ext_resource path="res://sprites/btnsoundUP.png" type="Texture" id=9]
[ext_resource path="res://sprites/btnsoundDOWN.png" type="Texture" id=10]
[ext_resource path="res://fonts/dos.fnt" type="BitmapFont" id=11]

[node name="level_gui" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="dlg_again" parent="." instance=ExtResource( 2 )]

visibility/visible = false
anchor/left = 3
anchor/right = 3
margin/left = 195.0
margin/top = 63.0
margin/right = 155.0
margin/bottom = 103.0

[node name="victory" parent="." instance=ExtResource( 3 )]

visibility/visible = false
anchor/left = 3
anchor/right = 3
margin/left = 316.0
margin/top = 141.0
margin/right = 276.0
margin/bottom = 181.0

[node name="dlg_areyousure" parent="." instance=ExtResource( 4 )]

visibility/visible = false
anchor/left = 3
anchor/right = 3
margin/left = 225.0
margin/top = 68.0
margin/right = 185.0
margin/bottom = 108.0

[node name="TextureButton_menu" type="TextureButton" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 146.0
margin/top = 6.0
margin/right = 82.0
margin/bottom = 70.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/scale = Vector2( 0.5, 0.5 )

[node name="TextureButton_again" type="TextureButton" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 217.0
margin/top = 5.0
margin/right = 153.0
margin/bottom = 69.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/scale = Vector2( 0.5, 0.5 )

[node name="TextureButton_sound" type="TextureButton" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 6.0
margin/right = 11.0
margin/bottom = 70.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
params/scale = Vector2( 0.5, 0.5 )

[node name="Label_level" type="Label" parent="."]

rect/scale = Vector2( 0.35, 0.36 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 8.0
margin/right = 440.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0.992188, 1, 0, 1 )
text = "Level: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="TextureButton_menu" to="." method="_on_TextureButton_menu_pressed"]

[connection signal="pressed" from="TextureButton_again" to="." method="_on_TextureButton_again_pressed"]

[connection signal="pressed" from="TextureButton_sound" to="." method="_on_TextureButton_sound_pressed"]


